// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search 视图 圆形搜索框 1`] = `
<form action="javascript:void 0">
  <div class="d-search" style="background-color: white;">
    <div class="d-search-content">
      <d-icon-stub name="search"></d-icon-stub> <input type="text" placeholder="请输入搜索关键字" class="d-search-control d-search-left">
      <d-icon-stub name="close" style="display: none;"></d-icon-stub>
    </div>
    <!---->
  </div>
</form>
`;

exports[`Search 视图 搜索框内容对齐 1`] = `
<form action="javascript:void 0">
  <div class="d-search" style="background-color: white;">
    <div class="d-search-content">
      <d-icon-stub name="search"></d-icon-stub> <input type="text" placeholder="请输入搜索关键字" class="d-search-control">
      <d-icon-stub name="close" style="display: none;"></d-icon-stub>
    </div>
    <!---->
  </div>
</form>
`;

exports[`Search 视图 普通展示 1`] = `
<form action="javascript:void 0">
  <div class="d-search" style="background-color: white;">
    <div class="d-search-content">
      <d-icon-stub name="search"></d-icon-stub> <input type="text" placeholder="请输入搜索关键字" class="d-search-control d-search-left">
      <d-icon-stub name="close" style="display: none;"></d-icon-stub>
    </div>
    <!---->
  </div>
</form>
`;

exports[`Search 视图 自定义右侧内容 1`] = `
<form action="javascript:void 0">
  <div class="d-search" style="background-color: white;">
    <div class="d-search-content">
      <d-icon-stub name="search"></d-icon-stub> <input type="text" placeholder="请输入搜索关键字" class="d-search-control d-search-left">
      <d-icon-stub name="close" style="display: none;"></d-icon-stub>
    </div>
    <div class="d-search-action"><span class="btn">搜索</span></div>
  </div>
</form>
`;

exports[`Search 视图 自定义背景色 1`] = `
<form action="javascript:void 0">
  <div class="d-search">
    <div class="d-search-content">
      <d-icon-stub name="search"></d-icon-stub> <input type="text" placeholder="请输入搜索关键字" class="d-search-control d-search-left">
      <d-icon-stub name="close" style="display: none;"></d-icon-stub>
    </div>
    <!---->
  </div>
</form>
`;
